Bug 70609 - FILEOPEN: Chart data file reading error
Summary: FILEOPEN: Chart data file reading error
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.3.0 target:4.2.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-10-18 11:06 UTC by seven7six6
Modified: 2020-06-10 09:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (113.18 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2013-10-18 11:06 UTC, seven7six6
Details

Note You need to log in before you can comment on or make changes to this bug.
Description seven7six6 2013-10-18 11:06:50 UTC
Created attachment 87815 [details]
sample file

Problem description: 

Opening an xlsx file with embedded charts.  The chart data range is corrupted resulting in no visible data in the chart.  

Steps to reproduce:
1. Open an xlsx file with an embedded chart with a range (when viewed in Excel 2000) such as 

=Indices!$A$10:$N$138

2. The chart data does not display

3. Check the actual data range in LibreOffice and it shows

$Indices.$A$10:$N$11

4. Set the range in LibreOffice to

$Indices.$A$10:$N$138

and the chart is displayed correctly

Current behavior:

Opening an xlsx file with embedded charts.  The chart data range is corrupted resulting in no visible data in the chart.  
If, after opening the file, the chart data range is set manually to the correct range the chart displays correctly which suggests the problem is with the file reading operation.


Expected behavior:

Chart should be correct on opening of file

              
Operating System: Windows 8
Version: 4.1.2.3 release
Comment 1 tommy27 2013-10-25 00:10:49 UTC
tested under Win7 64bit

I confirm issue in 4.1.2 and older version till 3.6.0

chart is correctly displayed in 3.5.7 and earlier releases and in AOO 4.0.0 as well.

so that's a LibO regression in early 3.6.x development

adding Calc expert to CC-list.
Comment 2 Markus Mohrhard 2014-04-16 23:54:16 UTC
So the shrinking of data ranges is hurting us here. I was never a big fan of this feature but it seems that we finally need a proper solution for the problem.

The problem is that the content is not yet imported and we are already importing the chart so shrinking to the used data range is wrong.

I'll limit the feature for now to cases where it won't hurt us too much and will think about proper solutions.
Comment 3 Commit Notification 2014-04-17 00:12:59 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ce6d9bcea7c37a7cb2c42e8393e2e20780bd171

limit the range shrinking in charts to really large ranges, fdo#70609,



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-04-17 00:48:02 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=326f8dc37bc11591e7d683b21085da7ee15b8072

add test case for fdo#70609



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Markus Mohrhard 2014-04-17 01:00:16 UTC
4.2 backport request at https://gerrit.libreoffice.org/#/c/9078/
Comment 6 Commit Notification 2014-04-17 09:28:32 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=45b959806da456adf3ba3a1e4f08130480ccf89c&h=libreoffice-4-2

limit the range shrinking in charts to really large ranges, fdo#70609,


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.