limit the range shrinking in charts to really large ranges, fdo#70609,

Also improves the situation for fdo#55697.

It is just the fist step to a better algorithm.

Change-Id: I15de1ca6604e585fcf5690f0d903c757d641e765